<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.RegisterActivity">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:layout_margin="16dp"
        android:background="?selectableItemBackground"
        android:contentDescription="@string/go_back"
        android:padding="8dp"
        android:scaleType="fitXY"
        android:src="@drawable/arrow_back"
        app:tint="#fff" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/logo_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/app_name"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_address_layout"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:layout_width="@dimen/auth_input_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/auth_input_max_length"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_address_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/email_address"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLength="@integer/auth_input_max_length" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:layout_width="@dimen/auth_input_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxLength="@integer/auth_input_max_length"
        app:boxBackgroundColor="@android:color/transparent"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/auth_input_max_length"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="@integer/auth_input_max_length" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/verify_password_layout"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:layout_width="@dimen/auth_input_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxLength="@integer/auth_input_max_length"
        app:boxBackgroundColor="@android:color/transparent"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/auth_input_max_length"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/verify_password_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/verify_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="@integer/auth_input_max_length" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="@dimen/auth_input_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/create_new_account"
        android:textAllCaps="true" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_horizontal"
        android:layout_width="@dimen/auth_input_width"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:indeterminate="true" />

    <Button
        android:id="@+id/login_button"
        style="@style/AppTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:text="@string/sign_in_existing_account"
        android:textAllCaps="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>