<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context=".activities.TextEditorActivity">

    <TextView
        android:layout_width="@dimen/auth_input_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/current_value" />

    <TextView
        android:id="@+id/current_value_text_view"
        android:layout_width="@dimen/auth_input_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:text="Monkey D. Luffy" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_edit_layout"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:layout_width="@dimen/auth_input_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="16dp"
        android:hint="@string/new_value"
        app:counterEnabled="true"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:inputType="text"
            tools:text="Roronoa Zoro" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="@dimen/auth_input_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="16dp"
        android:text="@string/save" />

</LinearLayout>