<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activities.VerifyEmailActivity">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_horizontal"
        android:layout_width="@dimen/auth_input_width"
        android:layout_height="wrap_content"
        android:indeterminate="true" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/message_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="visible">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/account_created"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/account_created"
            android:src="@drawable/check"
            app:layout_constraintEnd_toEndOf="@id/title"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:tint="@android:color/holo_green_dark" />

        <TextView
            android:id="@+id/message_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/verification_message"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icon" />

        <Button
            android:id="@+id/verified_button"
            android:layout_width="@dimen/auth_input_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/already_verified"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/message_text_view" />

        <Button
            android:id="@+id/resend_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/resend_verification_message"
            android:textAllCaps="true"
            android:theme="@style/ThemeOverlay.Material3.Button.TextButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/verified_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>